@@ -3,6 +3,7 @@ OpenLDAP 2.4 Change Log
 OpenLDAP 2.4.23 Engineering
 	Fixed liblutil off-by-one with delta (ITS#6541)
 	Fixed slapd syncrepl rid logging (ITS#6533)
+	Fixed slapd-bdb hasSubordinates computation (ITS#6549)
  	Fixed contrib/nssov network.c missing patch (ITS#6562)
 	Documentation
 	        slapd-config(5) note default rootdn (ITS#6546)
